# glob

./: .editorconfig  CMakeLists.txt  README.md
include/glob/: glob.h  glob.hpp
single_include/glob/: glob.hpp
source/: glob.cpp
standalone/source/: main.cpp
